cmake_minimum_required(VERSION 3.25)
project(CPP)

set(CMAKE_CXX_STANDARD 20)

add_executable(CPP main.cpp part1.cpp runoob.cpp runoob.cpp Chapter1.cpp Chapter1.hpp Chapter2.cpp Chapter2.hpp test1.cpp test1.hpp Fastq.cpp Fastq.hpp test2.cpp test2.hpp test3.cpp test3.hpp test4.cpp test4.hpp test5.cpp test5.hpp test6.cpp test6.hpp test7.cpp test7.hpp test8.cpp test8.hpp test9.cpp test10.cpp test11.cpp test12.cpp test13.cpp test14.cpp)
